# InspyreFire

./: .gitignore  pyproject.toml
inspyre_fire/: log_engine.py
inspyre_fire/common/: __init__.py
inspyre_fire/common/about/: __init__.py  author.py
inspyre_fire/common/version/: __init__.py
inspyre_fire/config/: __init__.py  constants.py  errors.py  factory.py
inspyre_fire/config/dirs/: defaults.py
inspyre_fire/config/spec/: __init__.py  alternate_dirs_config.json  core_config.json  developer_mode_config.json  logger_config.json
inspyre_fire/config/utils/: __init__.py  types.py
inspyre_fire/controller/: __init__.py
inspyre_fire/errors/: __init__.py  rich.py
